--- a/react-demo/src/pages/demo/index.module.scss
+++ b/react-demo/src/pages/demo/index.module.scss
@@ -1,8 +1,36 @@
-.btntest {
-  border-radius: 20px;
-  border: 1px solid #e4e4e4;
-  background-color: #eeeeee;
-  padding: 4px 4px;
-  cursor: pointer;
-  font-size: 60px;
+.home{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  // justify-content: center;
+  align-items: center;
+  .logo{
+    width: 100%;
+    padding: 20px;
+    img{
+      width:50px;
+      height:50px;
+      border-radius: 5px;
+    }
+  }
+  .serviceWorker{
+    margin: 20px;
+  }
+  .btn {
+    border-radius: 20px;
+    border: 1px solid #e4e4e4;
+    background-color: #eeeeee;
+    padding: 4px 4px;
+    cursor: pointer;
+    // font-size: 60px;
+  }
+}
+
+.about{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
