--- a/react-demo/src/pages/demo/index.module.scss
+++ b/react-demo/src/pages/demo/index.module.scss
@@ -12,6 +12,7 @@
       width:50px;
       height:50px;
       border-radius: 5px;
+      transform: rotate(0deg);
     }
   }
   .serviceWorker{
@@ -21,9 +22,18 @@
     border-radius: 20px;
     border: 1px solid #e4e4e4;
     background-color: #eeeeee;
-    padding: 4px 4px;
+    padding: 4px 4PX; // 大写PX不会被转换
     cursor: pointer;
-    // font-size: 60px;
+    font-size: 32px;
+  }
+  .ignore_btn{
+    font-size: 32px;
+  }
+}
+:global{
+  .homeGlobal{
+    background-color: #ffffff;
+    font-size: 20px;
   }
 }
 
