--- a/webpack-demo/05.打包图片资源/src/index.scss
+++ b/webpack-demo/05.打包图片资源/src/index.scss
@@ -8,7 +8,7 @@
 #box2{
   width: 200px;
   height: 200px;
-  background-image: url('./assets/61kb.jpg');
+  background-image: url('assets/61kb.jpg');
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
